[sc-2985]: require company on account creation for personal emails

--- a/libs/common/src/assets/i18n/ca.json
+++ b/libs/common/src/assets/i18n/ca.json
@@ -259,6 +259,7 @@
 	"language.tr": "Turc",
 	"login.access_request": "vol accedir al teu compte de Nuclia i poder: ",
 	"login.check_email": "Comprova el teu correu!",
+	"login.company": "Empresa",
 	"login.continue_with": "Continua amb",
 	"login.create_one": "Crea'n un!",
 	"login.description": "Coneix el què la teva empresa sap",
