--- a/libs/common/src/assets/i18n/es.json
+++ b/libs/common/src/assets/i18n/es.json
@@ -259,6 +259,7 @@
 	"language.tr": "Turco",
 	"login.access_request": "quiere acceder a tu cuenta de Nuclia y poder: ",
 	"login.check_email": "!Revisa tu correo!",
+	"login.company": "Empresa",
 	"login.continue_with": "Continua con",
 	"login.create_one": "Créala!",
 	"login.description": "Conoce lo que tu empresa sabe",
