[sc-2992] Display widget recommendation message

--- a/libs/common/src/assets/i18n/en.json
+++ b/libs/common/src/assets/i18n/en.json
@@ -646,6 +646,8 @@
 	"stash.widgets.add-help": "Name your widget to save it",
 	"stash.widgets.editLabels": "Edit labels",
 	"stash.widgets.entityAnnotation": "Entity annotation",
+	"stash.widgets.hint_1": "For the correct reading of the results, the width of the search bar should not be less than 384px.",
+	"stash.widgets.hint_2": "If the background you'll be adding your search isn't neutral, remember to add a background for your search box to make it easier to read.",
 	"stash.widgets.invalid-id": "Invalid widget id",
 	"stash.widgets.mode": "Mode",
 	"stash.widgets.mode.form": "Embedded search widget",
@@ -658,6 +660,7 @@
 	"stash.widgets.preview": "Preview",
 	"stash.widgets.publish_kb": "You can publish it from the",
 	"stash.widgets.publish_kb_link": "Dashboard",
+	"stash.widgets.recommendations": "Recommendations",
 	"stash.widgets.rename": "Rename",
 	"stash.widgets.rename-title": "Rename search widget",
 	"stash.widgets.snippet": "Code snippet",
