--- a/libs/common/src/assets/i18n/ca.json
+++ b/libs/common/src/assets/i18n/ca.json
@@ -554,6 +554,7 @@
 	"stash.widgets": "Widgets",
 	"stash.widgets.editLabels": "Edita les etiquetes",
 	"stash.widgets.entityAnnotation": "Anotació de l'entitat",
+	"stash.widgets.filter": "Filtre",
 	"stash.widgets.hint_1": "Per mostrar correctament els resultats, l'amplada de la barra de cerca no hauria de ser inferior a 348px.",
 	"stash.widgets.hint_2": "Si el color de fons no és neutral, recorda d'afegir un color a la caixa de cerca per fer-la més llegible.",
 	"stash.widgets.mode": "Mode",
