Don't display more than 1 or 2 filters
  - Display the extra filters in a dropdown
  - Fix small button size

--- a/libs/search-widget/public/i18n/ca.json
+++ b/libs/search-widget/public/i18n/ca.json
@@ -1,49 +1,50 @@
 {
-  "entities.annotated": "Anotacions",
-  "entities.annotations": "Anotacions",
-  "entities.date": "Dates",
-  "entities.event": "Esdeveniments",
-  "entities.fac": "Construccions",
-  "entities.gpe": "Localitats",
-  "entities.language": "Idiomes",
-  "entities.legal": "Legal",
-  "entities.loc": "Geografia",
-  "entities.mail": "Emails",
-  "entities.money": "Diners",
-  "entities.norp": "Nacionalitats",
-  "entities.org": "Organitzacions",
-  "entities.percent": "Percentatge",
-  "entities.person": "Persones",
-  "entities.product": "Productes",
-  "entities.quantity": "Quantitat",
-  "entities.time": "Temps",
-  "entities.title": "Insights",
-  "entities.work_of_art": "Obres",
-  "error.processing": "Aquest recurs encara no s'ha processat completament",
-  "error.search": "Ups! Alguna cosa ha anat malament!",
-  "error.search-beta": "Sort que t'hem avisat que encara estem en beta! 🙃",
-  "form.title-only": "Cerca només al títol",
-  "generic.cancel": "Cancel·lar",
-  "generic.save": "Guardar",
-  "input.placeholder": "Escriviu la vostra pregunta aquí",
-  "modal.back": "Tornar",
-  "resource.classification": "Classificació",
-  "resource.creation": "Data de creació",
-  "resource.language": "Idioma",
-  "resource.other": "Altres dades del recurs",
-  "resource.preview": "Previsualitzar",
-  "resource.relevance": "Rellevància",
-  "resource.search": "Cerca",
-  "resource.sequential": "Seqüencial",
-  "resource.show-all": "Mostra tots els paràgrafs",
-  "resource.source": "Document d'origen",
-  "resource.summary": "Resum",
-  "results.count": "Resultat {{index}} de {{total}}",
-  "results.empty": "Cap resultat",
-  "results.paragraphs": "Paràgrafs rellevants",
-  "results.semantic": "Resultats semàntics",
-  "results.sentences": "Frases rellevants",
-  "results.summary": "Resum",
-  "suggest.intents": "Etiquetes",
-  "suggest.paragraphs": "Paràgraf suggerit"
+	"entities.annotated": "Anotacions",
+	"entities.annotations": "Anotacions",
+	"entities.date": "Dates",
+	"entities.event": "Esdeveniments",
+	"entities.fac": "Construccions",
+	"entities.gpe": "Localitats",
+	"entities.language": "Idiomes",
+	"entities.legal": "Legal",
+	"entities.loc": "Geografia",
+	"entities.mail": "Emails",
+	"entities.money": "Diners",
+	"entities.norp": "Nacionalitats",
+	"entities.org": "Organitzacions",
+	"entities.percent": "Percentatge",
+	"entities.person": "Persones",
+	"entities.product": "Productes",
+	"entities.quantity": "Quantitat",
+	"entities.time": "Temps",
+	"entities.title": "Insights",
+	"entities.work_of_art": "Obres",
+	"error.processing": "Aquest recurs encara no s'ha processat completament",
+	"error.search": "Ups! Alguna cosa ha anat malament!",
+	"error.search-beta": "Sort que t'hem avisat que encara estem en beta! 🙃",
+	"form.title-only": "Cerca només al títol",
+	"generic.cancel": "Cancel·lar",
+	"generic.save": "Guardar",
+	"input.more_filters": "{{count}} filtres més",
+	"input.placeholder": "Escriviu la vostra pregunta aquí",
+	"modal.back": "Tornar",
+	"resource.classification": "Classificació",
+	"resource.creation": "Data de creació",
+	"resource.language": "Idioma",
+	"resource.other": "Altres dades del recurs",
+	"resource.preview": "Previsualitzar",
+	"resource.relevance": "Rellevància",
+	"resource.search": "Cerca",
+	"resource.sequential": "Seqüencial",
+	"resource.show-all": "Mostra tots els paràgrafs",
+	"resource.source": "Document d'origen",
+	"resource.summary": "Resum",
+	"results.count": "Resultat {{index}} de {{total}}",
+	"results.empty": "Cap resultat",
+	"results.paragraphs": "Paràgrafs rellevants",
+	"results.semantic": "Resultats semàntics",
+	"results.sentences": "Frases rellevants",
+	"results.summary": "Resum",
+	"suggest.intents": "Etiquetes",
+	"suggest.paragraphs": "Paràgraf suggerit"
 }
