--- a/libs/search-widget/public/i18n/es.json
+++ b/libs/search-widget/public/i18n/es.json
@@ -1,49 +1,50 @@
 {
-  "entities.annotated": "Anotaciones",
-  "entities.annotations": "Anotaciones",
-  "entities.date": "Fechas",
-  "entities.event": "Eventos",
-  "entities.fac": "Construcciones",
-  "entities.gpe": "Localidades",
-  "entities.language": "Idiomas",
-  "entities.law": "Legal",
-  "entities.loc": "Geografía",
-  "entities.mail": "Emails",
-  "entities.money": "Dinero",
-  "entities.norp": "Nacionalidades",
-  "entities.org": "Organizaciones",
-  "entities.percent": "Porcentaje",
-  "entities.person": "Personas",
-  "entities.product": "Productos",
-  "entities.quantity": "Cantidad",
-  "entities.time": "Tiempo",
-  "entities.title": "Insights",
-  "entities.work_of_art": "Obras",
-  "error.processing": "Este recurso aún no se ha procesado por completo",
-  "error.search": "¡Cáspita, algo ha ido mal!",
-  "error.search-beta": "Suerte que te hemos avisado que aún estamos en beta! 🙃",
-  "form.title-only": "Buscar solo en el título",
-  "generic.cancel": "Cancelar",
-  "generic.save": "Guardar",
-  "input.placeholder": "Escribe tu pregunta aqui",
-  "modal.back": "Volver",
-  "resource.classification": "Classificación",
-  "resource.creation": "Fecha de creación",
-  "resource.language": "Idioma",
-  "resource.other": "Otros datos del recurso",
-  "resource.preview": "Previsualitzar",
-  "resource.relevance": "Relevancia",
-  "resource.search": "Busca",
-  "resource.sequential": "Secuencial",
-  "resource.show-all": "Muestra todos los párrafos",
-  "resource.source": "Documento de origen",
-  "resource.summary": "Resumen",
-  "results.count": "Resultado {{index}} de {{total}}",
-  "results.empty": "No resultado",
-  "results.paragraphs": "Párrafos relevantes",
-  "results.semantic": "Resultados semánticos",
-  "results.sentences": "Frases relevantes",
-  "results.summary": "Resumen",
-  "suggest.intents": "Etiquetas",
-  "suggest.paragraphs": "Párrafo sugerido"
+	"entities.annotated": "Anotaciones",
+	"entities.annotations": "Anotaciones",
+	"entities.date": "Fechas",
+	"entities.event": "Eventos",
+	"entities.fac": "Construcciones",
+	"entities.gpe": "Localidades",
+	"entities.language": "Idiomas",
+	"entities.law": "Legal",
+	"entities.loc": "Geografía",
+	"entities.mail": "Emails",
+	"entities.money": "Dinero",
+	"entities.norp": "Nacionalidades",
+	"entities.org": "Organizaciones",
+	"entities.percent": "Porcentaje",
+	"entities.person": "Personas",
+	"entities.product": "Productos",
+	"entities.quantity": "Cantidad",
+	"entities.time": "Tiempo",
+	"entities.title": "Insights",
+	"entities.work_of_art": "Obras",
+	"error.processing": "Este recurso aún no se ha procesado por completo",
+	"error.search": "¡Cáspita, algo ha ido mal!",
+	"error.search-beta": "Suerte que te hemos avisado que aún estamos en beta! 🙃",
+	"form.title-only": "Buscar solo en el título",
+	"generic.cancel": "Cancelar",
+	"generic.save": "Guardar",
+	"input.more_filters": "{{count}} filtros más",
+	"input.placeholder": "Escribe tu pregunta aqui",
+	"modal.back": "Volver",
+	"resource.classification": "Classificación",
+	"resource.creation": "Fecha de creación",
+	"resource.language": "Idioma",
+	"resource.other": "Otros datos del recurso",
+	"resource.preview": "Previsualitzar",
+	"resource.relevance": "Relevancia",
+	"resource.search": "Busca",
+	"resource.sequential": "Secuencial",
+	"resource.show-all": "Muestra todos los párrafos",
+	"resource.source": "Documento de origen",
+	"resource.summary": "Resumen",
+	"results.count": "Resultado {{index}} de {{total}}",
+	"results.empty": "No resultado",
+	"results.paragraphs": "Párrafos relevantes",
+	"results.semantic": "Resultados semánticos",
+	"results.sentences": "Frases relevantes",
+	"results.summary": "Resumen",
+	"suggest.intents": "Etiquetas",
+	"suggest.paragraphs": "Párrafo sugerido"
 }
