--- a/libs/search-widget/public/i18n/es.json
+++ b/libs/search-widget/public/i18n/es.json
@@ -41,6 +41,7 @@
 	"resource.summary": "Resumen",
 	"results.count": "Resultado {{index}} de {{total}}",
 	"results.empty": "No resultado",
+	"results.more_labels": "{{count}} etiquetas más",
 	"results.paragraphs": "Párrafos relevantes",
 	"results.semantic": "Resultados semánticos",
 	"results.sentences": "Frases relevantes",
