--- a/libs/common/src/assets/i18n/ca.json
+++ b/libs/common/src/assets/i18n/ca.json
@@ -558,7 +558,7 @@
 	"stash.widgets.entityAnnotation": "Anotació de l'entitat",
 	"stash.widgets.filter": "Filtre",
 	"stash.widgets.hint_1": "Per mostrar correctament els resultats, l'amplada de la barra de cerca no hauria de ser inferior a 348px.",
-	"stash.widgets.hint_2": "Si el color de fons no és neutral, recorda d'afegir un color a la caixa de cerca per fer-la més llegible.",
+	"stash.widgets.hint_2": "Si el color de fons de la pàgina de cerca no és neutre, recordeu d'afegir un color de fons al quadre de cerca perquè sigui més fàcil de llegir.",
 	"stash.widgets.mode": "Mode",
 	"stash.widgets.mode.embedded": "Giny de cerca incrustat",
 	"stash.widgets.mode.popup": "Giny de cerca emergent",
