--- a/libs/common/src/assets/i18n/en.json
+++ b/libs/common/src/assets/i18n/en.json
@@ -650,7 +650,7 @@
 	"stash.widgets.entityAnnotation": "Entity annotation",
 	"stash.widgets.filter": "Filter",
 	"stash.widgets.hint_1": "For the correct reading of the results, the width of the search bar should not be less than 384px.",
-	"stash.widgets.hint_2": "If the background you'll be adding your search isn't neutral, remember to add a background for your search box to make it easier to read.",
+	"stash.widgets.hint_2": "If your search page background color isn't neutral, remember to add a background color on your search box to make it easier to read.",
 	"stash.widgets.invalid-id": "Invalid widget id",
 	"stash.widgets.mode": "Mode",
 	"stash.widgets.mode.embedded": "Embedded search widget",
