--- a/libs/common/src/assets/i18n/en.json
+++ b/libs/common/src/assets/i18n/en.json
@@ -597,10 +597,11 @@
 	"stash.settings.processes.labeler.info": "In order to label sentences automatically, existing content has to be labeled. As more content is labeled, training will improve. You can create new labels and classifications from the ontology page. ",
 	"stash.settings.processes.training.active": "There is an active training that you can stop at any time. You will receive an email when it is complete.",
 	"stash.settings.processes.training.agreement": "I accept the charges incurred by selecting this option",
-	"stash.settings.processes.training.all_labelsets": "All label sets",
 	"stash.settings.processes.training.last_run": "Last run: {{ runDate }}",
 	"stash.settings.processes.training.not-allowed": "The training feature is not available on basic accounts.",
+	"stash.settings.processes.training.select-entities": "Choose entity groups",
 	"stash.settings.processes.training.select-labelsets": "Choose the label sets",
+	"stash.settings.processes.training.select_all": "Select all",
 	"stash.settings.processes.training.start": "Start training",
 	"stash.settings.processes.training.stop": "Stop training",
 	"stash.settings.processes.training.time_requirement": "The time required to train is about {{hours}} hours which will be subtracted from the available hours.",
