--- a/libs/common/src/assets/i18n/es.json
+++ b/libs/common/src/assets/i18n/es.json
@@ -513,9 +513,10 @@
 	"stash.service_access_description": "¡Importante! Copia y guarda el código del Token. Una vez añadido, desaparecerá.",
 	"stash.settings": "Preferencias de la caja de conocimiento",
 	"stash.settings.processes.training.agreement": "Acepto los cargos incurridos al seleccionar esta opción",
-	"stash.settings.processes.training.all_labelsets": "Todas las etiquetas",
 	"stash.settings.processes.training.last_run": "Última ejecución: {{ runDate }}",
+	"stash.settings.processes.training.select-entities": "Escoger grupo de entidades",
 	"stash.settings.processes.training.select-labelsets": "Escoge las etiquetas",
+	"stash.settings.processes.training.select_all": "Seleccionar todo",
 	"stash.settings.processes.training.time_requirement": "El tiempo necesario para entrenar es de unas {{hours}} horas que se restarán de las horas disponibles.",
 	"stash.side.activity": "Registro de actividad",
 	"stash.side.audit": "Auditoría",
