Add feature description on widget generator page and cleanup translations

--- a/libs/common/src/assets/i18n/ca.json
+++ b/libs/common/src/assets/i18n/ca.json
@@ -555,8 +555,11 @@
 	"stash.widgets": "Widgets",
 	"stash.widgets.configuration": "Configuració del widget",
 	"stash.widgets.editLabels": "Edita les etiquetes",
+	"stash.widgets.editLabels.help": "Permet afegir/eliminar etiquetes de la vista de recursos",
 	"stash.widgets.entityAnnotation": "Anotació de l'entitat",
+	"stash.widgets.entityAnnotation.help": "Activa l'anotació d'entitats al visor",
 	"stash.widgets.filter": "Filtre",
+	"stash.widgets.filter.help": "Mostra els filtres a la barra de cerca",
 	"stash.widgets.hint_1": "Per mostrar correctament els resultats, l'amplada de la barra de cerca no hauria de ser inferior a 348px.",
 	"stash.widgets.hint_2": "Si el color de fons de la pàgina de cerca no és neutre, recordeu d'afegir un color de fons al quadre de cerca perquè sigui més fàcil de llegir.",
 	"stash.widgets.mode": "Mode",
@@ -564,8 +567,19 @@
 	"stash.widgets.mode.popup": "Giny de cerca emergent",
 	"stash.widgets.mode.video": "Barra de cerca i widget de vídeo",
 	"stash.widgets.navigateToLink": "Navega cap als enllaços",
-	"stash.widgets.permalink": "Enllaços permenents",
+	"stash.widgets.navigateToLink.help": "Quan feu servir Nuclia per cercar pàgines web, fer clic a un resultat obrirà la pàgina original en lloc de mostrar-la al visor.",
+	"stash.widgets.permalink": "Permalinks",
+	"stash.widgets.permalink.help": "Afegiu un paràmetre addicional a l'URL que permet l'obertura directa d'un recurs",
+	"stash.widgets.placeholder": "Placeholder de la barra de cerca",
+	"stash.widgets.preview": "Vista prèvia",
+	"stash.widgets.publish_kb": "Podeu publicar·lo des de",
+	"stash.widgets.publish_kb_link": "Panell",
 	"stash.widgets.recommendations": "Recomanacions",
+	"stash.widgets.snippet": "Fragment de codi",
+	"stash.widgets.suggestLabels": "Suggereix etiquetes",
+	"stash.widgets.suggestLabels.help": "Quan s'ha realitzat l'entrenament de la intenció de cerca d'etiquetes, es mostren les etiquetes suggerides en funció de la consulta",
+	"stash.widgets.title": "Generador de widgets de cerca",
+	"stash.widgets.warning": "Perquè el giny funcioni correctament, el quadre de coneixement <strong>ha de ser públic</strong>.",
 	"stats.get_started": "Començar",
 	"stats.total.title": "Nombre total de recursos",
 	"tasks.credits.title": "Cicles disponibles",
