--- a/libs/common/src/assets/i18n/en.json
+++ b/libs/common/src/assets/i18n/en.json
@@ -643,31 +643,31 @@
 	"stash.valid_emails_label": "Emails",
 	"stash.view_edit_service_access": "View / Edit existing Service Access",
 	"stash.widgets": "Widgets",
-	"stash.widgets.add": "Add search widget",
-	"stash.widgets.add-help": "Name your widget to save it",
 	"stash.widgets.configuration": "Widget configuration",
 	"stash.widgets.editLabels": "Edit labels",
+	"stash.widgets.editLabels.help": "Allows to add/remove labels from the resource view",
 	"stash.widgets.entityAnnotation": "Entity annotation",
+	"stash.widgets.entityAnnotation.help": "Enables entity annotation in the viewer",
 	"stash.widgets.filter": "Filter",
+	"stash.widgets.filter.help": "Displays filters in search bar",
 	"stash.widgets.hint_1": "For the correct reading of the results, the width of the search bar should not be less than 384px.",
 	"stash.widgets.hint_2": "If your search page background color isn't neutral, remember to add a background color on your search box to make it easier to read.",
-	"stash.widgets.invalid-id": "Invalid widget id",
 	"stash.widgets.mode": "Mode",
 	"stash.widgets.mode.embedded": "Embedded search widget",
 	"stash.widgets.mode.popup": "Popup search widget",
 	"stash.widgets.mode.video": "Search bar and video widget",
 	"stash.widgets.navigateToLink": "Navigate to links",
+	"stash.widgets.navigateToLink.help": "When using Nuclia to search web pages, clicking on a result will open the original page rather than rendering it in the viewer",
 	"stash.widgets.permalink": "Permalinks",
-	"stash.widgets.placeholder": "Placeholder",
+	"stash.widgets.permalink.help": "Add extra parameter in URL allowing direct opening of a resource",
+	"stash.widgets.placeholder": "Search bar placeholder",
 	"stash.widgets.preview": "Preview",
 	"stash.widgets.publish_kb": "You can publish it from the",
 	"stash.widgets.publish_kb_link": "Dashboard",
 	"stash.widgets.recommendations": "Recommendations",
-	"stash.widgets.rename": "Rename",
-	"stash.widgets.rename-title": "Rename search widget",
 	"stash.widgets.snippet": "Code snippet",
-	"stash.widgets.style": "Style",
 	"stash.widgets.suggestLabels": "Suggest labels",
+	"stash.widgets.suggestLabels.help": "When label search intent training has been done, displays labels suggested based on the query",
 	"stash.widgets.title": "Search widget generator",
 	"stash.widgets.warning": "In order for the widget to work properly, the <strong>knowledge box must be public</strong>.",
 	"stats.endpoint": "NucliaDB API endpoint",
