--- a/libs/common/src/assets/i18n/en.json
+++ b/libs/common/src/assets/i18n/en.json
@@ -668,6 +668,8 @@
 	"stash.widgets.snippet": "Code snippet",
 	"stash.widgets.suggestLabels": "Suggest labels",
 	"stash.widgets.suggestLabels.help": "When label search intent training has been done, displays labels suggested based on the query",
+	"stash.widgets.suggestions": "Suggestions",
+	"stash.widgets.suggestions.help": "Suggest results while typing search query",
 	"stash.widgets.title": "Search widget generator",
 	"stash.widgets.warning": "In order for the widget to work properly, the <strong>knowledge box must be public</strong>.",
 	"stats.endpoint": "NucliaDB API endpoint",
