[sc-3195] Refactor widget generator (#421)
* Refactor widget to take a list of features as input

* Remove broken "small" screen support from section-navbar

* Remove widget custom style

  - Clean up common style to keep only our tokens (we will restore the needed ones later)
  - Don't load custom style on widgets
  - Remove custom style from the store
  - Remove custom style tab from widget generator

* Fix project error found by WebStorm: bad svelte tooltip export

* Refactor widget store and remove backend dependency from api

* Widget generator refactoring: we cannot store the widgets anymore

  - Remove widgets endpoints from the SDK
  - New route for widget: /widget-generator
  - Update widget page: no more side panel

* Update theme to work with Pastanaga 2.58.0

  - Add rhythm 3.5
  - Update text field tokens
  - Update password input structure and style
  - Add `externalLabel` property on kb profile page
  - Add a gap between the fields on service access page

* Widget Generator page improvements

  - Adapt snippet container size to the page size
  - Don't skip first feature change, always update the snippet
  - Improve the syntax of recommendations

* Add feature description on widget generator page and cleanup translations

* Cleanup widget ids

* Remove sdk-demo app

* Display only available features when generating video widget

* [sc-3159]: Option to enable/disabled suggestions

--- a/libs/common/src/assets/i18n/es.json
+++ b/libs/common/src/assets/i18n/es.json
@@ -553,18 +553,35 @@
 	"stash.valid_emails_label": "Correos electrónicos",
 	"stash.view_edit_service_access": "Visualiza / Edita los Service Access existentes",
 	"stash.widgets": "Widgets",
+	"stash.widgets.configuration": "Configuracion de Widget",
 	"stash.widgets.editLabels": "Editar etiquetas",
+	"stash.widgets.editLabels.help": "Permite agregar/eliminar etiquetas desde la vista de recursos",
 	"stash.widgets.entityAnnotation": "Anotación de entidad",
+	"stash.widgets.entityAnnotation.help": "Habilita la anotación de entidades en el visor",
 	"stash.widgets.filter": "Filtrar",
+	"stash.widgets.filter.help": "Muestra filtros en la barra de búsqueda",
 	"stash.widgets.hint_1": "Para mostrar correctamente los resultados, el ancho de la barra de búsqueda no debería ser inferior a 384px.",
-	"stash.widgets.hint_2": "Si el color de fondo no es neutral, recuerda añadir un color a la caja de búsqueda para que sea más legible.",
+	"stash.widgets.hint_2": "Si el color de fondo de su página de búsqueda no es neutral, recuerde agregar un color de fondo en su cuadro de búsqueda para que sea más fácil de leer.",
 	"stash.widgets.mode": "Modo",
-	"stash.widgets.mode.form": "Widget de búsqueda integrado",
-	"stash.widgets.mode.input": "Widget de búsqueda emergente",
+	"stash.widgets.mode.embedded": "Widget de búsqueda integrado",
+	"stash.widgets.mode.popup": "Widget de búsqueda emergente",
 	"stash.widgets.mode.video": "Barra de búsqueda y widget de video",
 	"stash.widgets.navigateToLink": "Navega hacia los enlaces",
-	"stash.widgets.permalink": "Enlaces permanentes",
+	"stash.widgets.navigateToLink.help": "Al usar Nuclia para buscar páginas web, hacer clic en un resultado abrirá la página original en lugar de mostrarla en el visor.",
+	"stash.widgets.permalink": "Permalinks",
+	"stash.widgets.permalink.help": "Agregue un parámetro adicional en la URL que permita la apertura directa de un recurso",
+	"stash.widgets.placeholder": "Placeholder de la barra de búsqueda",
+	"stash.widgets.preview": "Previsualizar",
+	"stash.widgets.publish_kb": "Puedes publicarlo desde el",
+	"stash.widgets.publish_kb_link": "Tablero",
 	"stash.widgets.recommendations": "Recomendaciones",
+	"stash.widgets.snippet": "Fragmento de código",
+	"stash.widgets.suggestLabels": "Sugerir etiquetas",
+	"stash.widgets.suggestLabels.help": "Cuando se ha realizado el entrenamiento de la intención de búsqueda de etiquetas, muestra las etiquetas sugeridas en función de la consulta",
+	"stash.widgets.suggestions": "Sugerencias",
+	"stash.widgets.suggestions.help": "Sugerir resultados mientras escribe la consulta de búsqueda",
+	"stash.widgets.title": "Generador de widgets de búsqueda",
+	"stash.widgets.warning": "Para que el widget funcione correctamente, el cuadro de conocimiento <strong>debe ser público</strong>.",
 	"stats.get_started": "Empezar",
 	"stats.total.title": "Número total de recursos",
 	"tasks.credits.title": "Ciclos disponibles",
