Better translations + solid publish button

--- a/libs/common/src/assets/i18n/ca.json
+++ b/libs/common/src/assets/i18n/ca.json
@@ -59,9 +59,9 @@
 	"account.stash.add": "Afegir caixa coneixement",
 	"account.stash.delete": "Borrar",
 	"account.stash.edit": "Editar preferències",
-	"account.stash.publish": "Fes-ho públic",
+	"account.stash.publish": "Publica",
 	"account.stash.refresh_counters": "Actualitzar comptadors",
-	"account.stash.retire": "Fes-ho privat",
+	"account.stash.retire": "Despublicar",
 	"account.stash.upgrade": "Incrementar màxim KB",
 	"account.stash.users": "Gestió d'usuaris",
 	"account.title": "Nom del compte",
@@ -540,8 +540,8 @@
 	"stash.side.widgets": "Widgets",
 	"stash.side.working": "Processos",
 	"stash.state": "Estat",
-	"stash.state.private": "Estat privat",
-	"stash.state.published": "Estat públic",
+	"stash.state.private": "Estat: privat",
+	"stash.state.published": "Estat: Públic",
 	"stash.stats": "Dades",
 	"stash.title": "Títol de la caixa",
 	"stash.upload_data": "Pujar dades",
