--- a/libs/common/src/assets/i18n/es.json
+++ b/libs/common/src/assets/i18n/es.json
@@ -59,9 +59,9 @@
 	"account.stash.add": "Añadir caja de conocimiento",
 	"account.stash.delete": "Borrar",
 	"account.stash.edit": "Editar preferencias",
-	"account.stash.publish": "Hazlo publico",
+	"account.stash.publish": "Publicar",
 	"account.stash.refresh_counters": "Actualizar contadores",
-	"account.stash.retire": "Hazlo privado",
+	"account.stash.retire": "Despublicar",
 	"account.stash.upgrade": "Incrementar el máximo de KB",
 	"account.stash.users": "Gestión de usuarios",
 	"account.title": "Nombre de la cuenta",
@@ -540,8 +540,8 @@
 	"stash.side.widgets": "Widgets",
 	"stash.side.working": "Procesos",
 	"stash.state": "Estado",
-	"stash.state.private": "Estado privado",
-	"stash.state.published": "Estado público",
+	"stash.state.private": "Estado: privado",
+	"stash.state.published": "Estado: Público",
 	"stash.stats": "Datos",
 	"stash.title": "Título de la caja",
 	"stash.upload_data": "Subir datos",
