--- a/libs/common/src/assets/i18n/en.json
+++ b/libs/common/src/assets/i18n/en.json
@@ -69,9 +69,9 @@
 	"account.stash.add": "Add knowledge box",
 	"account.stash.delete": "Delete",
 	"account.stash.edit": "Edit preferences",
-	"account.stash.publish": "Make it public",
+	"account.stash.publish": "Publish",
 	"account.stash.refresh_counters": "Refresh counters",
-	"account.stash.retire": "Make it private",
+	"account.stash.retire": "Unpublish",
 	"account.stash.upgrade": "Increase KB maximum",
 	"account.stash.users": "Users management",
 	"account.title": "Account name",
@@ -628,8 +628,8 @@
 	"stash.side.widgets": "Widgets",
 	"stash.side.working": "Processes ",
 	"stash.state": "State",
-	"stash.state.private": "Private state",
-	"stash.state.published": "Public state",
+	"stash.state.private": "State: private",
+	"stash.state.published": "State: Public",
 	"stash.stats": "Data",
 	"stash.title": "Title of the box",
 	"stash.upload_data": "Upload data",
