Dashboard home page improvements (#426)
* Dashboard home page improvements

  - No more black box for API endpoint block
  - Add copy button allowing to copy the endpoint in one click
  - Improve stats box style + remove the refresh option
  - Update copy on state box + move it below stats box
  - Update desktop box
  - No more color-neutral-background (replaced by color-neutral-lightest)

* Better translations + solid publish button

--- a/libs/common/src/assets/i18n/ca.json
+++ b/libs/common/src/assets/i18n/ca.json
@@ -59,9 +59,9 @@
 	"account.stash.add": "Afegir caixa coneixement",
 	"account.stash.delete": "Borrar",
 	"account.stash.edit": "Editar preferències",
-	"account.stash.publish": "Publicar",
+	"account.stash.publish": "Publica",
 	"account.stash.refresh_counters": "Actualitzar comptadors",
-	"account.stash.retire": "Moure a privat",
+	"account.stash.retire": "Despublicar",
 	"account.stash.upgrade": "Incrementar màxim KB",
 	"account.stash.users": "Gestió d'usuaris",
 	"account.title": "Nom del compte",
@@ -540,6 +540,8 @@
 	"stash.side.widgets": "Widgets",
 	"stash.side.working": "Processos",
 	"stash.state": "Estat",
+	"stash.state.private": "Estat: privat",
+	"stash.state.published": "Estat: Públic",
 	"stash.stats": "Dades",
 	"stash.title": "Títol de la caixa",
 	"stash.upload_data": "Pujar dades",
@@ -583,7 +585,7 @@
 	"stash.widgets.title": "Generador de widgets de cerca",
 	"stash.widgets.warning": "Perquè el giny funcioni correctament, el quadre de coneixement <strong>ha de ser públic</strong>.",
 	"stats.get_started": "Començar",
-	"stats.total.title": "Nombre total de recursos",
+	"stats.total.title": "Recursos",
 	"tasks.credits.title": "Cicles disponibles",
 	"tasks.credits.upgrade": "Adquirir més cicles",
 	"upload.audio_detected": "El teu fitxer conté un audio.",
