--- a/libs/common/src/assets/i18n/en.json
+++ b/libs/common/src/assets/i18n/en.json
@@ -71,7 +71,7 @@
 	"account.stash.edit": "Edit preferences",
 	"account.stash.publish": "Publish",
 	"account.stash.refresh_counters": "Refresh counters",
-	"account.stash.retire": "Move to private",
+	"account.stash.retire": "Unpublish",
 	"account.stash.upgrade": "Increase KB maximum",
 	"account.stash.users": "Users management",
 	"account.title": "Account name",
@@ -628,8 +628,8 @@
 	"stash.side.widgets": "Widgets",
 	"stash.side.working": "Processes ",
 	"stash.state": "State",
-	"stash.state.private": "Private",
-	"stash.state.published": "Published",
+	"stash.state.private": "State: private",
+	"stash.state.published": "State: Public",
 	"stash.stats": "Data",
 	"stash.title": "Title of the box",
 	"stash.upload_data": "Upload data",
@@ -678,7 +678,7 @@
 	"stats.total.fields": "Fields",
 	"stats.total.paragraphs": "Paragraphs",
 	"stats.total.sentences": "Sentences",
-	"stats.total.title": "Total number of resources",
+	"stats.total.title": "Resources",
 	"stats.total_search": "Total search operations",
 	"tasks.credits.title": "Available cycles",
 	"tasks.credits.upgrade": "Get more cycles",
