--- a/libs/common/src/assets/i18n/es.json
+++ b/libs/common/src/assets/i18n/es.json
@@ -61,7 +61,7 @@
 	"account.stash.edit": "Editar preferencias",
 	"account.stash.publish": "Publicar",
 	"account.stash.refresh_counters": "Actualizar contadores",
-	"account.stash.retire": "Mover a privado",
+	"account.stash.retire": "Despublicar",
 	"account.stash.upgrade": "Incrementar el máximo de KB",
 	"account.stash.users": "Gestión de usuarios",
 	"account.title": "Nombre de la cuenta",
@@ -540,6 +540,8 @@
 	"stash.side.widgets": "Widgets",
 	"stash.side.working": "Procesos",
 	"stash.state": "Estado",
+	"stash.state.private": "Estado: privado",
+	"stash.state.published": "Estado: Público",
 	"stash.stats": "Datos",
 	"stash.title": "Título de la caja",
 	"stash.upload_data": "Subir datos",
@@ -583,7 +585,7 @@
 	"stash.widgets.title": "Generador de widgets de búsqueda",
 	"stash.widgets.warning": "Para que el widget funcione correctamente, el cuadro de conocimiento <strong>debe ser público</strong>.",
 	"stats.get_started": "Empezar",
-	"stats.total.title": "Número total de recursos",
+	"stats.total.title": "Recursos",
 	"tasks.credits.title": "Ciclos disponibles",
 	"tasks.credits.upgrade": "Adquirir más ciclos",
 	"upload.audio_detected": "Tu fichero contiene un audio.",
